syntax = "proto3";

option csharp_namespace = "ItTrAp.QueryService.Infrastructure.Protos";

package inventory;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

service InventoryServer {
    rpc GetMovableItems(GetMovableItemsRequest) returns (GetMovableItemsResponse);
    rpc GetMovableInstancesByItemId(GetMovableInstancesByItemIdRequest) returns (GetMovableInstancesByItemIdResponse);
    rpc GetInstanceAmountsByItemIds(GetInstanceAmountsByItemIdsRequest) returns (GetInstanceAmountsByItemIdsResponse);
}

message MovableItem {
    string id = 1;
    string name = 2;
    google.protobuf.StringValue description = 3;
    uint32 categoryId = 4;
    google.protobuf.Timestamp createdAt = 5;
    google.protobuf.StringValue imgSrc = 6;
    Category category = 7;
}

message Category {
    uint32 id = 1;
    string name = 2;
    google.protobuf.StringValue Icon = 3;
}

message MovableInstance {
    uint32 id = 1;
    string movableItemId = 2;
    google.protobuf.Timestamp createdAt = 3;
}

// ---

message GetMovableItemsRequest {
    repeated string itemIds = 1;
    repeated uint32 categoryIds = 2;
    google.protobuf.StringValue search = 3;
}

message GetMovableItemsResponse {
    repeated MovableItem items = 1;
}

// ---

message GetMovableInstancesByItemIdRequest {
    string itemId = 1;
}

message GetMovableInstancesByItemIdResponse {
    repeated MovableInstance instances = 1;
}

// ---

message GetInstanceAmountsByItemIdsRequest {
    repeated string ids = 1;
}

message GetInstanceAmountsByItemIdsResponse {
    repeated uint32 amounts = 1;
}